2002-05-31  David Hampton  <hampton@employees.org>

	* src/gnome/reconcile-list.c: Fix the direction of the sort
	arrows.

	* src/gnome-utils/dialog-options.c: Preferences dialogs will now
	switch over from a tabbed notebook to a list/notebook pair if
	there are more than four pages.  Put radio buttons in a horizontal
	box instead of a vertical one.

	* src/gnome-utils/gnc-html.c:
	* src/gnome-utils/gw-gnome-utils-spec.scm:
	* src/gnome-utils/print-session.[ch]:
	* src/scm/printing/print-check.scm: Eliminate warning messages
	while printing.
	
2002-05-27  Derek Atkins   <derek@ihtfp.com>

	* src/app-utils/option-util.c: Add a function to reset all the gui
	widgets for an option-db, ignoring sections that begin "__".

	* dialog-options.c: remove all the 'set to default' buttons and
	add a single 'defaults' button in the dialog button box, which
	resets all the options to their default values.  The user still
	has to 'apply' the changes to take effect.  Also change "close" to
	"cancel".

2002-05-27  David Hampton  <hampton@employees.org>

	* src/dialog-account/dialog-account.c: Sort the account type list
	in the Edit Account dialog.

2002-05-27  Derek Atkins   <derek@ihtfp.com>

	* dialog-options.c: implement a radiobutton option type.
	* options.scm: implement a radiobutton option type.
	* app-utils.scm: export the new radiobutton option creators
	* prefs.scm: change the Account Separator to a radiobutton; move
	to its own page
	
2002-05-26  Derek Atkins   <derek@ihtfp.com>

	* src/gnome-util/dialog-options.[ch]: Create an option-type
	database so that modules can define new option-types and plug them
	into Gnucash.  Break apart the existing "if type == blah; else if
	type == blah blah..." code and use the new options-type database.
	New options require the implementation of three functions,
	set_widget(), set_value(), and get_value().
	
2002-05-24  Derek Atkins   <derek@ihtfp.com>

	* src/engine/GNCId.c: Implement xaccForeachEntity() as a which