@@ -1,0 +1,5 @@
+.deps
+.libs
+Makefile
+Makefile.in
+test-link-module
