@@ -1,0 +1,7 @@
+TESTS=test-link
+
+noinst_PROGRAMS=test-link-module
+
+test_link_module_SOURCES=test-link-module.c
+test_link_module_LDADD=../libgncmod-hbci.la 
+
