@@ -1,0 +1,6 @@
+int
+main(int argc, char ** argv) 
+{
+  return 0;
+}
+
